--- a/testimonial.html
+++ b/testimonial.html
@@ -59,7 +59,7 @@
 <a class="text-text-body text-sm font-medium leading-normal hover:text-primary transition-colors" href="team.html">Team</a>
 <a class="text-text-light text-sm font-bold leading-normal" href="testimonial.html">Testimonials</a>
 </div>
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-[#171712] text-sm font-bold leading-normal tracking-[0.015em] hover:brightness-110 transition-all">
+<button onclick="location.href='contact.html'" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-[#171712] text-sm font-bold leading-normal tracking-[0.015em] hover:brightness-110 transition-all">
 <span class="truncate">Contact Us</span>
 </button>
 </div>
