--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
 <a class="text-black dark:text-white text-sm font-medium leading-normal" href="services.html">Services</a>
 <a class="text-black dark:text-white text-sm font-medium leading-normal" href="portfolio.html">Portfolio</a>
 <a class="text-black dark:text-white text-sm font-medium leading-normal" href="team.html">Team</a>
-<a class="text-black dark:text-white text-sm font-medium leading-normal" href="testimonials.html">TestiMonials</a>
+<a class="text-black dark:text-white text-sm font-medium leading-normal" href="testimonial.html">TestiMonials</a>
 </div>
 <button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-4 bg-primary text-background-dark text-sm font-bold leading-normal tracking-[0.015em]">
 <span class="truncate">Schedule a Call</span>
