--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
 <a class="text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="team.html">Team</a>
 <a class="text-white text-sm font-medium leading-normal hover:text-primary transition-colors" href="testimonial.html">Testimonials</a>
 </nav>
-<button class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-5 bg-primary text-background-dark text-sm font-bold leading-normal tracking-wide hover:opacity-90 transition-opacity">
+<button onclick="location.href='contact.html'" class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-lg h-10 px-5 bg-primary text-background-dark text-sm font-bold leading-normal tracking-wide hover:opacity-90 transition-opacity">
 <span class="truncate">Contact Us</span>
 </button>
 </header>
